Completed List Tags Functionality

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -29,6 +29,7 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" asp-controller="AdminTags" asp-action="Add">Add Tag</a></li>
+                            <li><a class="dropdown-item" asp-controller="AdminTags" asp-action="GetTags">Tags List</a></li>
                         </ul>
                     </li>
                 </ul>
