--- a/Views/AdminTags/Edit.cshtml
+++ b/Views/AdminTags/Edit.cshtml
@@ -11,6 +11,10 @@
     <div class="container py-5">
         <form method="post">
             <div class="mb-3">
+                <label class="form-label">Id</label>
+                <input type="text" class="form-control" id="Id" asp-for="Id" readonly/>
+            </div>
+            <div class="mb-3">
                 <label class="form-label">Name</label>
                 <input type="text" class="form-control" id="name" asp-for="Name"/>
             </div>
@@ -19,8 +23,12 @@
                 <input type="text" class="form-control" id="displayName" asp-for="DisplayName"/>
             </div>
 
-            <button type="submit" class="btn btn-dark">Submit</button>
-
+            <div class="mb-3">
+                <div class="d-flex">
+                    <button type="submit" class="btn btn-dark">Update</button>
+                    <button type="submit" class="btn btn-danger mx-3" asp-area="" asp-controller="AdminTags" asp-action="Delete" asp-route-id="Id">Delete</button>
+                </div>
+            </div>
         </form>
     </div>
     
