Completed Add blogpost UI

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -30,6 +30,7 @@
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" asp-controller="AdminTags" asp-action="Add">Add Tag</a></li>
                             <li><a class="dropdown-item" asp-controller="AdminTags" asp-action="GetTags">Tags List</a></li>
+                            <li><a class="dropdown-item" asp-controller="AdminBlogPost" asp-action="Add">Add Blogpost</a></li>
                         </ul>
                     </li>
                 </ul>
