--- a/Views/AdminBlogPost/Add.cshtml
+++ b/Views/AdminBlogPost/Add.cshtml
@@ -60,7 +60,7 @@
         
         <div class="mb-3">
             <label class="form-label">Tags</label>
-            <select class="form-select" asp-items="@Model.Tags" asp-for="@Model.SelectedTag">
+            <select class="form-select" asp-items="@Model.Tags" asp-for="SelectedTags">
             </select>
         </div>
 
