--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -31,6 +31,7 @@
                             <li><a class="dropdown-item" asp-controller="AdminTags" asp-action="Add">Add Tag</a></li>
                             <li><a class="dropdown-item" asp-controller="AdminTags" asp-action="GetTags">Tags List</a></li>
                             <li><a class="dropdown-item" asp-controller="AdminBlogPost" asp-action="Add">Add Blogpost</a></li>
+                            <li><a class="dropdown-item" asp-controller="AdminBlogPost" asp-action="List">Blog Posts List</a></li>
                         </ul>
                     </li>
                 </ul>
