Completed Delete blogpost functionality

--- a/Views/AdminBlogPost/Edit.cshtml
+++ b/Views/AdminBlogPost/Edit.cshtml
@@ -74,6 +74,7 @@
 
         <div class="mb-3">
             <button type="submit" class="btn btn-dark">Submit</button>
+            <a class="btn btn-danger" asp-controller="AdminBlogPost" asp-action="Delete" asp-route-id="@Model.Id">Delete</a>
         </div>
 
     </form>
