--- a/Views/AdminBlogPost/List.cshtml
+++ b/Views/AdminBlogPost/List.cshtml
@@ -10,32 +10,40 @@
     </div>
 </div>
 
-<div class="py-2">
-    <table class="table table-striped">
-        <thead>
+@if (Model != null && Model.Any())
+{
+    
+    <div class="py-2">
+        <table class="table table-striped">
+            <thead>
             <th>Id</th>
             <th>Title</th>
             <th>Tags</th>
             <th> </th>
-        </thead>
-        <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>@item.Id</td>
-                <td>@item.PageTitle</td>
-                <td>
-                    @foreach (var tag in item.Tags)
-                    {
-                        <div class="badge bg-primary">@tag.Name</div>
-                    }
-                </td>
-                <td>
-                    <a class="btn btn-primary" asp-area="" asp-controller="AdminBlogPost" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
-                </td>
-            </tr>
-        }
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>@item.Id</td>
+                    <td>@item.PageTitle</td>
+                    <td>
+                        @foreach (var tag in item.Tags)
+                        {
+                            <div class="badge bg-primary">@tag.Name</div>
+                        }
+                    </td>
+                    <td>
+                        <a class="btn btn-primary" asp-area="" asp-controller="AdminBlogPost" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                    </td>
+                </tr>
+            }
+            </tbody>
+        </table>
+    </div>
 
-</div>
+}
+else
+{
+    <div class="container py-5">No Blogposts exist</div>
+}
