--- a/Views/AdminBlogPost/Add.cshtml
+++ b/Views/AdminBlogPost/Add.cshtml
@@ -70,3 +70,10 @@
         
     </form>
 </div>
+
+@section Scripts
+{
+    <script>
+        var editor = new FroalaEditor('#content');
+    </script>
+}
