--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -48,7 +48,7 @@
                         </div>
                         <p class="mb-3">@blogPost.ShortDescription</p>
                         
-                        <a class="mb-2 btn btn-dark" href="#">Read more</a>
+                        <a class="mb-2 btn btn-dark" asp-area="" asp-controller="Blog" asp-action="Index" asp-route-urlHandle="@blogPost.UrlHandle">Read more</a>
                     </div>
                 }
             }
